disabled blurring until I can solve perf issues

--- a/css/components/_palettemodal.sass
+++ b/css/components/_palettemodal.sass
@@ -24,11 +24,11 @@
     +v.center
     +v.colordisplaycolor
     +v.colordisplaybgfade7
-    +v.blurbg
+    // +v.blurbg
 
     width: 100vw
     position: fixed
-    filter: blur(0)
+    // filter: blur(0)
     z-index: v.$layer-overlay
     font-size: 2rem
     pointer-events: none
